# projekt-2-michalwysocki17

./: CMakeLists.txt
src/: main.cpp
